2006-01-07 Stuart Brorson <sdb AT cloud9 DOT net>
	*  configure.ac, src/Makefile.am:  Changed automake stuff
	to explicitly look for guile, and then link to it.

	*  autogen.sh, m4/guile.m4:  Added local guile macros.
	
2006-01-04 Stuart Brorson <sdb@cloud9.net>
	*  src/g_netlist.c, src/s_net.c, scheme/gnet-drc2.scm
	scheme/gnetlist.scm, scheme/gnet-systemc.scm, 
	scheme/gnet-vams.scm, scheme/gnet-verilog.scm
	scheme/gnet-vhdl.scm:  Modified code to emit
	"unconnected_pin-<number>" to fix bug noticed by John Doty.
	Besides modifying s_net.c to achieve this, I had to change
	the strcmp fcn in many files to a strncmp fcn to compare only
	the first 15 chars against "unconnected_pin".  Added strncmp?
	to scheme/gnetlist.scm to do this for Scheme backends.

	*  scheme/gnet-spice-sdb.scm:  Fix bug discovered by John Doty: 
	spice-IO pins with refdes greater than P9 were sorted 
	incorrectly (as strings).  Now they are sorted as numbers.
	
2005-12-28 Carlos Nieves Onega <cnieves@iespana.es>
	* src/g_netlist: Dereferenced return value of scm_c_module_lookup,
	which is passed to scm_sort_list_x.
	Fixed long standing bug that produces a "Wrong type argument in
	position 1: #<variable 8059240 binding: #<primitive-procedure <=>>" 
	error when running gnetlist.
	Thanks to Neal Baer and James Cotton for the bug report, and also
	to Patrick Bernaud for the solution.	

2005-11-27 Carlos Nieves Onega <cnieves@iespana.es>
	* src/globals.c: Added setting of load_newer_backup_func to NULL.
	It is needed now libgeda checks for autosave backup files when
	opening a schematic.
	
2005-09-27 18:44  Dan McMahill <danmc>

        * configure.ac: check for strings.h for rindex

2005-09-27 18:43  Dan McMahill <danmc>

        * src/s_hierarchy.c: remove various compiler warnings

2005-09-11 Stuart Brorson <sdb@cloud9.net>

        * gnet-spice-sdb.scm: Incorporated patch from Paul Bunyk enabling
	netlisting of Josephson junctions and other magnetic devices.
