@@ -1,3 +1,12 @@
+2006-01-15 Carlos Nieves Onega <cnieves@iespana.es>
+	* scheme/gnet-drc2.scm: Changed error message to be more 
+	self-explaining.
+	
+2006-01-07 Carlos Nieves Onega <cnieves@iespana.es>
+	* scheme/gnet-drc2.scm: Added missing 'passive' in the 
+	pintype-full-names list, and changed the pintype error/warning 
+	message to something more self-explaining.
+	
 2006-01-07 Stuart Brorson <sdb AT cloud9 DOT net>
 	*  configure.ac, src/Makefile.am:  Changed automake stuff
 	to explicitly look for guile, and then link to it.
